--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.1.4",
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "serialize-javascript": "^3.0.0"
   }
 }
